<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Encrypt">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toTopOf="@id/first"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Encrypt Message"
            android:textColor="@color/black"
            android:textSize="36dp"
            android:textAlignment="center"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/first"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toTopOf="@id/second"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title">
        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/input_text"
            android:layout_gravity="center"/>
        <EditText
            android:id="@+id/inputTextID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/message"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/second"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toTopOf="@id/third"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/first">
        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/multiplier_input"
            android:layout_gravity="center"/>
        <EditText
            android:id="@+id/multiplierInputID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/mul"
            android:inputType="numberDecimal"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/third"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toTopOf="@id/second"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cipherButtonID">
        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/adder_input"
            android:layout_gravity="center"/>
        <EditText
            android:id="@+id/adderInputID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:inputType="numberDecimal"
            android:hint="@string/adder"
            />
    </LinearLayout>
    <Button
        android:id="@+id/cipherButtonID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/encrypt_input_text"
        app:layout_constraintBottom_toTopOf="@id/resultTextID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/third"
        />
    <TextView
        android:id="@+id/resultTextID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textSize="36dp"
        android:gravity="center"
        android:layout_margin="10dp"
        android:textColor="@color/black"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cipherButtonID" />

</androidx.constraintlayout.widget.ConstraintLayout>