<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Decrypt">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toTopOf="@id/fourth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Decrypt Message"
            android:textColor="@color/black"
            android:textSize="36dp"
            android:textAlignment="center"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/fourth"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toTopOf="@id/fifth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title">
        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/input_text"
            android:layout_gravity="center"/>
        <EditText
            android:id="@+id/inputTextDecID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/message"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/fifth"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toTopOf="@id/sixth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fourth">
        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/multiplier_input"
            android:layout_gravity="center"/>
        <EditText
            android:id="@+id/multiplierInputDecID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/mul"
            android:inputType="numberDecimal"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/sixth"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toTopOf="@id/fifth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/decipherButtonID">
        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/adder_input"
            android:layout_gravity="center"/>
        <EditText
            android:id="@+id/adderInputDecID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:inputType="numberDecimal"
            android:hint="@string/adder"
            />
    </LinearLayout>
    <Button
        android:id="@+id/decipherButtonID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/decrypt_text"
        app:layout_constraintBottom_toTopOf="@id/resultTextDecID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sixth"
        />
    <TextView
        android:id="@+id/resultTextDecID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textSize="36dp"
        android:gravity="center"
        android:layout_margin="10dp"
        android:textColor="@color/black"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/decipherButtonID" />

</androidx.constraintlayout.widget.ConstraintLayout>